mount: document changed semantics of tmpfs size option in mount.8
Linux kernel commit 818db35992c249dc32c1d86daf7d533fb0952f5d fixed a
problem where invoking mount -t tmpfs with a size argument smaler than the
size of one page caused the limits on the size of a tmpfs to not operate.
The commit also caused the number supplied by the size option to be
rounded up to the  nearest page size instead of down.  This alters the man
page to match the behavior of the kernel in this instance.

Signed-off-by: Kevin Granade <kevin.granade@gmail.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1945,7 +1945,7 @@ None.
 .TP
 .BI size= nbytes
 Override default maximum size of the filesystem.
-The size is given in bytes, and rounded down to entire pages.
+The size is given in bytes, and rounded up to entire pages.
 The default is half of the memory. The size parameter also accepts a suffix %
 to limit this tmpfs instance to that percentage of your physical RAM:
 the default, when neither size nor nr_blocks is specified, is size=50%
