mount: fix reference to samba-client in mount.8
Address-Red-Hat-Bug: #521367
Signed-off-by: Karel Zak <kzak@redhat.com>

--- a/mount/mount.8
+++ b/mount/mount.8
@@ -1005,7 +1005,7 @@ These options are accepted but ignored.
 .SH "Mount options for cifs"
 See the options section of the
 .BR mount.cifs (8)
-man page (cifs-mount package must be installed).
+man page (samba-client package must be installed).
 
 .SH "Mount options for coherent"
 None.
