--- a/AUTHORS
+++ b/AUTHORS
@@ -56,12 +56,16 @@ CONTRIBUTORS:
       Bernhard Walle <bwalle@suse.de>
       Cai Qian <qcai@redhat.com>
       Christophe Blaess <Christophe@Blaess.fr>
+      Christoph Hellwig <hch@infradead.org>
       Chris Webb <chris@arachsys.com>
       Claus Hindsgaul <claus_h@image.dk>
       Cliff Wickman <cpw@sgi.com>
       Clytie Siddall <clytie@riverland.net.au>
+      Corentin Chary <corentincj@iksaif.net>
+      Cristian Rodríguez <crrodriguez@opensuse.org>
       Daisuke Yamashita <yamad@mb.infoweb.ne.jp>
       Daniel Drake <dsd@laptop.org>
+      Daniel Mierswa <impulze@impulze.org>
       Daniel Nylander <po@danielnylander.se>
       David Brownell <david-b@pacbell.net>
       David Miller <davem@davemloft.net>
@@ -71,18 +75,23 @@ CONTRIBUTORS:
       Dmitry V. Levin <ldv@altlinux.org>
       Eric Sandeen <sandeen@redhat.com>
       Flávio Leitner <fleitner@redhat.com>
+      Florentin Duneau <fduneau@gmail.com>
+      Florian Zumbiehl <florz@florz.de>
       Frédéric Bothamy <frederic.bothamy@free.fr>
       Gabor Kelemen <kelemeng@gnome.hu>
       Gabriel Barazer <gabriel@oxeva.fr>
       Gabriel Burt <gburt@novell.com>
       Guan Xin <guanx.bac@gmail.com>
+      Guillem Jover <guillem@hadrons.org>
       Hamish Coleman <hamish@zot.org>
       Hayden James <hayden.james@gmail.com>
+      Hendrik Lönngren <wikibugs@googlemail.com>
       H. Peter Anvin <hpa@zytor.com>
       Hugh Dickins <hugh@veritas.com>
       Imre Kaloz <kaloz@openwrt.org>
       Jakob Unterwurzacher <jakobunt@gmail.com>
       James Youngman <jay@gnu.org>
+      Jan Sarenik <jsarenik@redhat.com>
       Jason Vas Dias <jvdias@redhat.com>
       Jeff Mahoney <jeffm@suse.com>
       Jim Meyering <meyering@redhat.com>
@@ -93,10 +102,12 @@ CONTRIBUTORS:
       Kalev Soikonen <ksop@hot.ee>
       Kay Sievers <kay.sievers@vrfy.org>
       Kees Cook <kees.cook@canonical.com>
+      kevin.granade@gmail.com <kevin.granade@gmail.com>
       Kunihiko IMAI <kimai@iodata.jp>
       LaMont Jones <lamont@debian.org>
       LaMont Jones <lamont@mmjgroup.com>
       Lauri Nurmi <lanurmi@iki.fi>
+      Lawrence Rust <lawrence@softsystem.co.uk>
       Li Zefan <lizf@cn.fujitsu.com>
       Lubomir Kundrak <lkundrak@redhat.com>
       Luciano Chavez <lnx1138@us.ibm.com>
@@ -112,12 +123,15 @@ CONTRIBUTORS:
       Matthew Garrett <mjg59@srcf.ucam.org>
       Matthias Koenig <mkoenig@suse.de>
       maximilian attems <max@stro.at>
+      Maxim Levitsky <maximlevitsky@gmail.com>
       Maxim V. Dziumanenko <mvd@mylinux.com.ua>
       Meelis Roos <mroos@linux.ee>
       Michael Piefel <piefel@informatik.hu-berlin.de>
       Michel Robitaille <robitail@IRO.UMontreal.CA>
       Mike Frysinger <vapier@gentoo.org>
+      Mike Hommey <mh@glandium.org>
       Mikel Olasagasti <hey_neken@mundurat.net>
+      Mikhail Gusarov <dottedmag@dottedmag.net>
       Miklos Szeredi <mszeredi@suse.cz>
       Milan Broz <mbroz@redhat.com>
       Moritz Muehlenhoff <jmm@inutil.org>
@@ -128,11 +142,14 @@ CONTRIBUTORS:
       Olivier Blin <blino@mandriva.com>
       Pádraig Brady <P@draigBrady.com>
       Pascal Terjan <pterjan@cmoi.fasmz.org>
+      Paul Fox <pgf@laptop.org>
       Paulius Zaleckas <paulius.zaleckas@teltonika.lt>
       Pavel Maryanov <acid_jack@ukr.net>
       Pedro Ribeiro <p.m42.ribeiro@gmail.com>
       Peter Breitenlohner <peb@mppmu.mpg.de>
+      Peter De Wachter <pdewacht@gmail.com>
       Peter Jones <pjones@redhat.com>
+      Peter Volkov <pva@gentoo.org>
       Petr Pisar <petr.pisar@atlas.cz>
       Phan Vinh Thinh <teppi82@gmail.com>
       Rajeev V. Pillai <rajeevvp@gmail.com>
