--- a/AUTHORS
+++ b/AUTHORS
@@ -15,6 +15,8 @@ PAST MAINTAINERS:
 
 AUTHORS (merged projects & commands):
 
+      fallocate:       Eric Sandeen <sandeen@redhat.com>
+                       Karel Zak <kzak@redhat.com>
       flock:           H. Peter Anvin <hpa@zytor.com>
       getopt:          Frodo Looijaard <frodol@dds.nl>
       hwclock:         Bryan Henderson <bryanh@giraffe-data.com>
@@ -31,7 +33,8 @@ AUTHORS (merged projects & commands):
       simpleinit:      Richard Gooch <rgooch@atnf.csiro.au>
       switch_root:     Peter Jones <pjones@redhat.com>
                        Jeremy Katz <katzj@redhat.com>
-      fallocate:       Eric Sandeen <sandeen@redhat.com>
+      unshare:         Mikhail Gusarov <dottedmag@dottedmag.net>
+      wipefs:          Karel Zak <kzak@redhat.com>
 
 
 CONTRIBUTORS:
