--- a/po/pl.po
+++ b/po/pl.po
@@ -1,4 +1,4 @@
-# Polish translation of util-linux
+# Polish translation of util-linux-ng
 # Copyright (C) 2005 Free Software Foundation, Inc.
 # This file is distributed under the same license as the util-linux-ng package.
 # Andrzej Krzysztofowicz <ankry@mif.pg.gda.pl>, 2006.
@@ -2396,7 +2396,7 @@ msgid ""
 "\t   machine.  (Otherwise you become an AIXpert)."
 msgstr ""
 "\n"
-"\tNa tym dysku istnieje poprawna etykieta AIX-a.\n"
+"\tNa tym dysku istnieje poprawna etykieta typu AIX.\n"
 "\tNiestety Linux nie obecnie nie potrafi obs³u¿yæ\n"
 "\ttakich dysków. Tym niemniej kilka uwag:\n"
 "\t1. fdisk zniszczy jej zawarto¶æ przy zapisie.\n"
@@ -3459,7 +3459,7 @@ msgid ""
 "\ta new empty DOS partition table first. (Use o.)\n"
 "\tWARNING: This will destroy the present disk contents.\n"
 msgstr ""
-"\tNiestety ta wersja fdiska nie obs³uguje etykiet dysku AIX-a.\n"
+"\tNiestety ta wersja fdiska nie obs³uguje etykiet dysku typu AIX.\n"
 "\tAby dodaæ DOS-owe partycje, nale¿y najpierw utworzyæ\n"
 "\tpust± DOS-ow± tablicê partycji (poleceniem o).\n"
 "\tUWAGA: zniszczy to obecn± zawarto¶æ dysku.\n"
@@ -3472,7 +3472,7 @@ msgid ""
 "\ta new empty DOS partition table first. (Use o.)\n"
 "\tWARNING: This will destroy the present disk contents.\n"
 msgstr ""
-"\tNiestety ta wersja fdiska nie obs³uguje etykiet dysku Maca.\n"
+"\tNiestety ta wersja fdiska nie obs³uguje etykiet dysku typu Mac.\n"
 "\tAby dodaæ DOS-owe partycje, nale¿y najpierw utworzyæ\n"
 "\tpust± DOS-ow± tablicê partycji (poleceniem o).\n"
 "\tUWAGA: zniszczy to obecn± zawarto¶æ dysku.\n"
@@ -3690,88 +3690,97 @@ msgid ""
 "\t   part of a volume group. (Otherwise you may\n"
 "\t   erase the other disks as well, if unmirrored.)\n"
 msgstr ""
+"\n"
+"\tNa tym dysku istnieje poprawna etykieta typu Mac.\n"
+"\tNiestety Linux nie obecnie nie potrafi obs³u¿yæ\n"
+"\ttakich dysków. Tym niemniej kilka uwag:\n"
+"\t1. fdisk zniszczy jej zawarto¶æ przy zapisie.\n"
+"\t2. Nale¿y siê upewniæ, ¿e ten dysk NIE pozostaje\n"
+"\t   aktywn± czê¶ci± ¿adnej grupy wolumenów\n"
+"\t   (w przeciwnym wypadku mo¿na usun±æ tak¿e\n"
+"\t    zawarto¶æ innych dysków, je¶li nie maj± kopii).\n"
 
 #: fdisk/fdisksgilabel.c:81
 msgid "SGI volhdr"
-msgstr ""
+msgstr "SGI volhdr"
 
 #: fdisk/fdisksgilabel.c:82
 msgid "SGI trkrepl"
-msgstr ""
+msgstr "SGI trkrepl"
 
 #: fdisk/fdisksgilabel.c:83
 msgid "SGI secrepl"
-msgstr ""
+msgstr "SGI secrepl"
 
 #: fdisk/fdisksgilabel.c:84
 msgid "SGI raw"
-msgstr ""
+msgstr "SGI raw"
 
 #: fdisk/fdisksgilabel.c:85
 msgid "SGI bsd"
-msgstr ""
+msgstr "SGI bsd"
 
 #: fdisk/fdisksgilabel.c:86
 msgid "SGI sysv"
-msgstr ""
+msgstr "SGI sysv"
 
 #: fdisk/fdisksgilabel.c:87
 msgid "SGI volume"
-msgstr ""
+msgstr "SGI volume"
 
 #: fdisk/fdisksgilabel.c:88
 msgid "SGI efs"
-msgstr ""
+msgstr "SGI efs"
 
 #: fdisk/fdisksgilabel.c:89
 msgid "SGI lvol"
-msgstr ""
+msgstr "SGI lvol"
 
 #: fdisk/fdisksgilabel.c:90
 msgid "SGI rlvol"
-msgstr ""
+msgstr "SGI rlvol"
 
 #: fdisk/fdisksgilabel.c:91
 msgid "SGI xfs"
-msgstr ""
+msgstr "SGI xfs"
 
 #: fdisk/fdisksgilabel.c:92
 msgid "SGI xfslog"
-msgstr ""
+msgstr "SGI xfslog"
 
 #: fdisk/fdisksgilabel.c:93
 msgid "SGI xlv"
-msgstr ""
+msgstr "SGI xlv"
 
 #: fdisk/fdisksgilabel.c:94
 msgid "SGI xvm"
-msgstr ""
+msgstr "SGI xvm"
 
 #: fdisk/fdisksgilabel.c:95 fdisk/fdisksunlabel.c:55
 msgid "Linux swap"
-msgstr ""
+msgstr "Linux swap"
 
 #: fdisk/fdisksgilabel.c:96 fdisk/fdisksunlabel.c:56
 msgid "Linux native"
-msgstr ""
+msgstr "Linux native"
 
 #: fdisk/fdisksgilabel.c:97 fdisk/fdisksunlabel.c:57 fdisk/i386_sys_types.c:63
 msgid "Linux LVM"
-msgstr ""
+msgstr "Linux LVM"
 
 #: fdisk/fdisksgilabel.c:98
 msgid "Linux RAID"
-msgstr ""
+msgstr "Linux RAID"
 
 #: fdisk/fdisksgilabel.c:164
 #, c-format
 msgid "According to MIPS Computer Systems, Inc the Label must not contain more than 512 bytes\n"
-msgstr ""
+msgstr "Zgodnie z wytycznymi MIPS Computer Systems, Inc etykieta nie mo¿e zawieraæ wiêcej ni¿ 512 bajtów\n"
 
 #: fdisk/fdisksgilabel.c:183
 #, c-format
 msgid "Detected sgi disklabel with wrong checksum.\n"
-msgstr ""
+msgstr "Wykryto etykietê dysku SGI z b³êdn± sum± kontroln±.\n"
 
 #: fdisk/fdisksgilabel.c:201
 #, c-format
@@ -3784,6 +3793,13 @@ msgid ""
 "Units = %s of %d * %d bytes\n"
 "\n"
 msgstr ""
+"\n"
+"Dysk %s (etykieta dysku SGI): g³owic: %d, sektorów: %llu\n"
+"cylindrów: %d, fizycznych cylindrów: %d\n"
+"dodatkowych sektorów/cylinder: %d, przeplot %d:1\n"
+"%s\n"
+"Jednostka = %s, czyli %d * %d bajtów\n"
+"\n"
 
 #: fdisk/fdisksgilabel.c:214
 #, c-format
@@ -3793,6 +3809,10 @@ msgid ""
 "Units = %s of %d * %d bytes\n"
 "\n"
 msgstr ""
+"\n"
+"Dysk %s (etykieta dysku SGI): g³owic: %d, sektorów: %llu, cylindrów: %d\n"
+"Jednostka: %s, czyli %d * %d bajtów\n"
+"\n"
 
 #: fdisk/fdisksgilabel.c:221
 #, c-format
@@ -3800,6 +3820,8 @@ msgid ""
 "----- partitions -----\n"
 "Pt# %*s  Info     Start       End   Sectors  Id  System\n"
 msgstr ""
+"----- partycje -----\n"
+"Pt# %*s  Info     Pocz±tek   Koniec Sektorów ID  System\n"
 
 #: fdisk/fdisksgilabel.c:243
 #, c-format
@@ -3808,11 +3830,14 @@ msgid ""
 "Bootfile: %s\n"
 "----- Directory Entries -----\n"
 msgstr ""
+"----- Rozruch -----\n"
+"Plik rozruchu: %s\n"
+"----- Wpisy katalogu -----\n"
 
 #: fdisk/fdisksgilabel.c:251
 #, c-format
 msgid "%2d: %-10s sector%5u size%8u\n"
-msgstr ""
+msgstr "%2d: %-10s sektor%5u rozmiar%8u\n"
 
 #: fdisk/fdisksgilabel.c:305
 #, c-format
@@ -3822,6 +3847,10 @@ msgid ""
 "\tThe bootfile must be an absolute non-zero pathname,\n"
 "\te.g. \"/unix\" or \"/unix.save\".\n"
 msgstr ""
+"\n"
+"Niepoprawny plik rozruchowy!\n"
+"\tPlik rozruchowy musi byæ bezwzglêdn±, niepust± ¶cie¿k±,\n"
+"\tnp. \"/unix\" lub \"/unix.save\".\n"
 
 #: fdisk/fdisksgilabel.c:311
 #, c-format
@@ -3829,6 +3858,8 @@ msgid ""
 "\n"
 "\tName of Bootfile too long:  16 bytes maximum.\n"
 msgstr ""
+"\n"
+"\tNazwa pliku rozruchowego zbyt d³uga: maksimum to 16 bajtów.\n"
 
 #: fdisk/fdisksgilabel.c:316
 #, c-format
@@ -3836,6 +3867,8 @@ msgid ""
 "\n"
 "\tBootfile must have a fully qualified pathname.\n"
 msgstr ""
+"\n"
+"\tPlik rozruchowy musi mieæ pe³n± ¶cie¿kê.\n"
 
 #: fdisk/fdisksgilabel.c:323
 #, c-format
@@ -3844,6 +3877,9 @@ msgid ""
 "\tBe aware, that the bootfile is not checked for existence.\n"
 "\tSGI's default is \"/unix\" and for backup \"/unix.save\".\n"
 msgstr ""
+"\n"
+"\tUwaga: program nie sprawdza istnienia pliku rozruchowego.\n"
+"\tDomy¶lny dla SGI to \"/unix\" oraz \"unix.save\" dla kopii zapasowej.\n"
 
 #: fdisk/fdisksgilabel.c:349
 #, c-format
@@ -3851,21 +3887,23 @@ msgid ""
 "\n"
 "\tBootfile is changed to \"%s\".\n"
 msgstr ""
+"\n"
+"\tPlik rozruchowy zmieniony na \"%s\".\n"
 
 #: fdisk/fdisksgilabel.c:439
 #, c-format
 msgid "More than one entire disk entry present.\n"
-msgstr ""
+msgstr "Istnieje wiêcej ni¿ jeden wpis dla ca³ego dysku.\n"
 
 #: fdisk/fdisksgilabel.c:446 fdisk/fdisksunlabel.c:388
 #, c-format
 msgid "No partitions defined\n"
-msgstr ""
+msgstr "Nie zdefiniowano ¿adnej partycji\n"
 
 #: fdisk/fdisksgilabel.c:452
 #, c-format
 msgid "IRIX likes when Partition 11 covers the entire disk.\n"
-msgstr ""
+msgstr "IRIX lubi gdy partycja 11 pokrywa ca³y dysk.\n"
 
 #: fdisk/fdisksgilabel.c:454
 #, c-format
@@ -3873,6 +3911,8 @@ msgid ""
 "The entire disk partition should start at block 0,\n"
 "not at diskblock %d.\n"
 msgstr ""
+"Partycja ca³ego dysku powinna zaczynaæ siê od bloku 0,\n"
+"a nie bloku dysku %d.\n"
 
 #: fdisk/fdisksgilabel.c:460
 #, c-format
@@ -3880,31 +3920,33 @@ msgid ""
 "The entire disk partition is only %d diskblock large,\n"
 "but the disk is %d diskblocks long.\n"
 msgstr ""
+"Partycja ca³ego dysku ma rozmiar tylko %d bloków dysku,\n"
+"podczas gdy dysk ma %d bloków.\n"
 
 #: fdisk/fdisksgilabel.c:466
 #, c-format
 msgid "One Partition (#11) should cover the entire disk.\n"
-msgstr ""
+msgstr "Jedna partycja (#11) powinna pokrywaæ ca³y dysk.\n"
 
 #: fdisk/fdisksgilabel.c:476
 #, c-format
 msgid "Partition %d does not start on cylinder boundary.\n"
-msgstr ""
+msgstr "Partycja %d nie zaczyna siê na granicy cylindra.\n"
 
 #: fdisk/fdisksgilabel.c:482
 #, c-format
 msgid "Partition %d does not end on cylinder boundary.\n"
-msgstr ""
+msgstr "Partycja %d nie koñczy siê na granicy cylindra.\n"
 
 #: fdisk/fdisksgilabel.c:489
 #, c-format
 msgid "The Partition %d and %d overlap by %d sectors.\n"
-msgstr ""
+msgstr "Partycje %d i %d zachodz± na siebie %d sektorami.\n"
 
 #: fdisk/fdisksgilabel.c:497 fdisk/fdisksgilabel.c:515
 #, c-format
 msgid "Unused gap of %8u sectors - sectors %8u-%u\n"
-msgstr ""
+msgstr "Nieu¿ywany odstêp %8u sektorów - sektory %8u-%u\n"
 
 #: fdisk/fdisksgilabel.c:526
 #, c-format
@@ -3912,6 +3954,8 @@ msgid ""
 "\n"
 "The boot partition does not exist.\n"
 msgstr ""
+"\n"
+"Partycja rozruchowa nie istnieje.\n"
 
 #: fdisk/fdisksgilabel.c:529
 #, c-format
@@ -3919,6 +3963,8 @@ msgid ""
 "\n"
 "The swap partition does not exist.\n"
 msgstr ""
+"\n"
+"Partycja wymiany nie istnieje.\n"
 
 #: fdisk/fdisksgilabel.c:533
 #, c-format
@@ -3926,16 +3972,18 @@ msgid ""
 "\n"
 "The swap partition has no swap type.\n"
 msgstr ""
+"\n"
+"Partycja wymiany nie jest typu swap.\n"
 
 #: fdisk/fdisksgilabel.c:536
 #, c-format
 msgid "\tYou have chosen an unusual boot file name.\n"
-msgstr ""
+msgstr "\tWybrano niestandardow± nazwê pliku rozruchowego.\n"
 
 #: fdisk/fdisksgilabel.c:545
 #, c-format
 msgid "Sorry You may change the Tag of non-empty partitions.\n"
-msgstr ""
+msgstr "Mo¿na zmieniæ znacznik tylko dla niepustych partycji.\n"
 
 #: fdisk/fdisksgilabel.c:551
 msgid ""
@@ -3945,30 +3993,35 @@ msgid ""
 "Only the \"SGI volume\" entire disk section may violate this.\n"
 "Type YES if you are sure about tagging this partition differently.\n"
 msgstr ""
+"Zdecydowanie zaleca siê, aby partycja pod offsetem 0 by³a typu\n"
+"\"SGI volhdr\"; system IRIX polega na tym przy odczycie z katalogu\n"
+"samodzielnych narzêdzi, takich jak sash i fx. Jedynie sekcja ca³ego\n"
+"dysku \"SGI volume\" mo¿e byæ niezgodna z tym zaleceniem.\n"
+"Proszê wpisaæ TAK, je¶li na pewno ta partycja ma byæ oznaczona inaczej.\n"
 
 #: fdisk/fdisksgilabel.c:556 fdisk/fdisksunlabel.c:554
 msgid "YES\n"
-msgstr ""
+msgstr "TAK\n"
 
 #: fdisk/fdisksgilabel.c:581
 #, c-format
 msgid "Do You know, You got a partition overlap on the disk?\n"
-msgstr ""
+msgstr "Na tym dysku partycje zachodz± na siebie.\n"
 
 #: fdisk/fdisksgilabel.c:639
 #, c-format
 msgid "Attempting to generate entire disk entry automatically.\n"
-msgstr ""
+msgstr "Próba automatycznego wygenerowania wpisy dla ca³ego dysku.\n"
 
 #: fdisk/fdisksgilabel.c:644
 #, c-format
 msgid "The entire disk is already covered with partitions.\n"
-msgstr ""
+msgstr "Ca³y dysk jest ju¿ pokryty partycjami.\n"
 
 #: fdisk/fdisksgilabel.c:648
 #, c-format
 msgid "You got a partition overlap on the disk. Fix it first!\n"
-msgstr ""
+msgstr "Na tym dysku partycje zachodz± na siebie. Najpierw trzeba to poprawiæ!\n"
 
 #: fdisk/fdisksgilabel.c:657 fdisk/fdisksgilabel.c:686
 #, c-format
@@ -3976,16 +4029,18 @@ msgid ""
 "It is highly recommended that eleventh partition\n"
 "covers the entire disk and is of type `SGI volume'\n"
 msgstr ""
+"Zdecydowanie zaleca siê, aby partycja jedenasta\n"
+"pokrywa³a ca³y dysk i by³a typu `SGI volume'\n"
 
 #: fdisk/fdisksgilabel.c:673
 #, c-format
 msgid "You will get a partition overlap on the disk. Fix it first!\n"
-msgstr ""
+msgstr "Na tym dysku partycje bêd± zachodzi³y na siebie. Najpierw trzeba to poprawiæ!\n"
 
 #: fdisk/fdisksgilabel.c:678
 #, c-format
 msgid " Last %s"
-msgstr ""
+msgstr " Ostatni %s"
 
 #: fdisk/fdisksgilabel.c:708
 #, c-format
@@ -3995,6 +4050,10 @@ msgid ""
 "content will be unrecoverably lost.\n"
 "\n"
 msgstr ""
+"Tworzenie nowej etykiety dysku SGI. Zmiany pozostan± tylko w pamiêci\n"
+"do chwili ich zapisania. Potem, oczywi¶cie, poprzednia zawarto¶æ\n"
+"bêdzie nie do odzyskania.\n"
+"\n"
 
 #: fdisk/fdisksgilabel.c:731 fdisk/fdisksunlabel.c:227
 #, c-format
@@ -4002,16 +4061,18 @@ msgid ""
 "Warning:  BLKGETSIZE ioctl failed on %s.  Using geometry cylinder value of %d.\n"
 "This value may be truncated for devices > 33.8 GB.\n"
 msgstr ""
+"Uwaga: ioctl BLKGETSIZE na %s nie powiód³ siê. Przyjêto liczbê cylindrów %d.\n"
+"Ta warto¶æ mo¿e byæ uciêta dla urz±dzeñ > 33.8GB.\n"
 
 #: fdisk/fdisksgilabel.c:745
 #, c-format
 msgid "Trying to keep parameters of partition %d.\n"
-msgstr ""
+msgstr "Próba zachowania parametrów partycji %d.\n"
 
 #: fdisk/fdisksgilabel.c:747
 #, c-format
 msgid "ID=%02x\tSTART=%d\tLENGTH=%d\n"
-msgstr ""
+msgstr "ID=%02x\tPOCZ¡TEK=%d\tD£UGO¦Æ=%d\n"
 
 #: fdisk/fdisksunlabel.c:43
 msgid "Unassigned"
